Bug 156914 - LibreOffice 7.6.0.3 fails to build with --without-java
Summary: LibreOffice 7.6.0.3 fails to build with --without-java
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.6.0.3 release
Hardware: All All
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:7.6.2
Keywords:
Depends on:
Blocks:
 
Reported: 2023-08-25 14:58 UTC by Heiko Becker
Modified: 2023-09-04 06:41 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Heiko Becker 2023-08-25 14:58:53 UTC
While 7.5.5.2 built fine with --without-java, 7.6.0.3 started to fail to build with that:

[build CXX] cui/source/options/optlingu.cxx
/var/tmp/paludis/build/app-office-libreoffice-7.6.0.3/work/libreoffice-7.6.0.3/cui/source/options/optjava.cxx: In member function 'void SvxJavaClassPathDlg::SetClassPath(co
nst rtl::OUString&)':
/var/tmp/paludis/build/app-office-libreoffice-7.6.0.3/work/libreoffice-7.6.0.3/cui/source/options/optjava.cxx:945:29: error: 'jfw_convertUserPathList' was not declared in this scope
  945 |         std::vector paths = jfw_convertUserPathList(_rPath);
      |                             ^~~~~~~~~~~~~~~~~~~~~~~

#include <jvmfwk/framework.hxx> is behind "#if HAVE_FEATURE_JAVA" but "jfw_convertUserPathList" is not, causing the build failure.
Comment 1 Julien Nabet 2023-08-25 15:32:24 UTC
Samuel: noticing 7795a2adc0a724220440dca997495043902f1384, thought you might be interested in this one.
Comment 2 Commit Notification 2023-09-01 08:17:26 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/37780648aa46a8d10ef0801d18225ae1ed859161

tdf#156914 Fix --without-java build

It will be available in 7.6.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.