tdf#156914 Fix --without-java build

Squashed backport of the following commits:

cui: fix --without-java build
commit af3963c32c63893949a3028396af90ee7d811e5b

cui: don't build SvxJavaClassPathDlg::SetClassPath() for the non-java case
commit 8b330bb761e05fcfabd5a30f8784046c93b91431

Change-Id: I6e6994c632c95a9662cde9ed3eddc0350dcff149
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156320
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>